FIX: EA height issue on search results
Previous min-height was almost the size of the image, so the overlay was
too large.

--- a/css/enhancedsteam.css
+++ b/css/enhancedsteam.css
@@ -1278,7 +1278,7 @@ input[type=checkbox].es_dlc_selection:checked + label {
 	z-index: 4;
 	width: auto !important;
 	height: 60%;
-	min-height: 50px;
+	min-height: 35px;
 	max-height: 120px;
 }
 .es_overlay img {
